# tracelens

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  README.md  components.json  eslint.config.ts  index.html  package-lock.json  package.json  prettier.config.ts  vite.config.ts
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  build.rs  segy_rev1_spec.json  segy_rev21_spec.json  segy_rev2_spec.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: segy_rev0_spec.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/segy/: binary_header.rs  constants.rs  header_spec.rs  io.rs  mod.rs  model.rs  reader.rs  textual_header.rs  trace.rs  trace_data.rs  utils.rs
src-tauri/src/segy/parser/: binary_header.rs  byte_order_macros.rs  mod.rs  textual_header.rs  trace.rs  trace_data.rs
src-tauri/src/segy/rendering/: colormap.rs  mod.rs  normalizer.rs  types.rs  vd_renderer.rs  wiggle_renderer.rs
src/app/: App.tsx
src/app/components/: AppHeader.tsx
src/app/hooks/: useSystemTheme.ts
src/components/: BinaryHeaderTable.tsx  LoadingSpinner.tsx  TraceHeaderTable.tsx
src/components/layout/: Header.tsx
src/components/trace-visualization/: TraceCanvas.tsx  TraceControlPanel.tsx  TraceVisualizationContainer.tsx
src/features/segy/: constants.ts
src/services/tauri/: segy.ts
src/shared/components/: LoadingSpinner.tsx
src/store/: appStore.ts  traceVisualizationStore.ts
src/types/: headerSpec.ts  rendering.ts  segy.ts
src/utils/: formatters.ts
(+26 files in other folders)
