[package]
name = "tracelens"
version = "0.1.0"
description = "SEG-Y Viewer - A modern desktop app for viewing and analyzing SEG-Y seismic data files"
authors = ["Altay Sansal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tasansal/tracelens"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt", "macros", "sync"] }
byteorder = "1.5"
memmap2 = "0.9"
image = "0.25"
tiny-skia = "0.11"
rayon = "1.10"
colorgrad = { version = "0.8.0", features = ["preset"] }
png = "0.18.0"
